# MyRender

./: .gitignore  CLAUDE.md  CMakeLists.txt  MyRender.cpp  MyRender.h  README.md  test.cpp
SDL/include/SDL3/: SDL_revision.h
SDL/lib/pkgconfig/: sdl3.pc
assets/car/: Back.tga  BigRock_01_T_N.tga  Front.tga  Left.tga  Right.tga  body_material.json  body_material2.json  car_scene.json  car_scene_2.json  interior_material.json  panel_material.json  sky_back_material.json  sky_front_material.json  sky_right_material.json  windows_material.json
assets/unity_export/ValidationScene/: scene.json
assets/unity_export/ValidationScene/materials/: Capsule_Mat.mat.json  Cube_Mat.mat.json  Ground_Mat.mat.json  Sphere_Mat.mat.json  Textured_Mat.mat.json
assets/unity_export/ValidationScene/meshes/: Capsule_126.mesh  Cube_120.mesh  Plane_128.mesh  Sphere_124.mesh
assets/unity_export/ValidationScene/textures/: Textured_AO.tga  Textured_Albedo.tga  Textured_Emission.tga  Textured_Mask.tga  Textured_Normal.tga
base/: Attributes.hpp  Matrix.hpp  Utils.hpp  Varyings.hpp  Vector.hpp
core/: Camera.hpp  Config.hpp  Gameobject.hpp  Image.hpp  Input.hpp  Light.hpp  LitMat.hpp  Material.hpp  MaterialCache.hpp  MaterialCatch.hpp  Mesh.hpp  MeshCache.hpp  MeshCatch.hpp  MetaData.hpp  Program.hpp  Render.hpp  RenderUtils.hpp  Scene.hpp  SimpleLitMat.hpp  Texture.hpp  UnLitMat.hpp  Utils.hpp
docs/: MyRender_AssetFormat.md  Unity_Importer_Design.md  Unity_Importer_Tasks.md
docs/authoring/: part2.md  part4.md  part5.md
docs/authoring/images/: part3.md  project.json
docs/authoring/shots/: bench.txt
docs/video/output1/: README.md
docs/video/output1/ep1/: meta.md  script.md
docs/video/output1/ep2/: meta.md  script.md
docs/video/output1/ep3/: meta.md  script.md
docs/video/output2/: README.md
docs/video/output2/ep1/: meta.md  script.md
docs/video/output2/ep2/: meta.md  script.md
docs/video/output2/ep3/: meta.md  script.md
docs/video/output3/: README.md
docs/video/output3/ep1/: meta.md  script.md
docs/video/output3/ep2/: meta.md  script.md
docs/video/output3/ep3/: meta.md  script.md
gpu/: BRDF.hpp  CommonMaterial.hpp  GlobalIllumination.hpp  ImageBasedLighting.hpp  Lighting.hpp  LitInput.hpp  LitShader.hpp  Macros.hpp  ShaderFunction.hpp  ShaderGlobal.hpp  SimpleLitShader.hpp  UnLitShader.hpp
src/: MyRender.cpp
src/base/: Vector.hpp  Vertex.hpp
src/core/: Camera.hpp  Gameobject.hpp  LegacySceneLoader.hpp  LegacyTransforms.hpp  LitMat.hpp  Material.hpp  MaterialCache.hpp  Mesh.hpp  Render.hpp  RenderUtils.hpp  Scene.hpp  SceneAsset.hpp  SceneModel.hpp  ShadowPass.hpp  SimpleLitMat.hpp  Texture.hpp  UnitySceneLoader.hpp
src/gpu/: BRDF.hpp  ImageBasedLighting.hpp  Lighting.hpp  LitInput.hpp  LitShader.hpp  ShaderFunction.hpp  ShaderGlobal.hpp  SimpleLitShader.hpp
tech_doc/: AUTHORING.md  meta.md  old.md  part1.md  part2.md  part3.md  part4.md  part5.md
tech_doc/images/: meta.md  part1.md  part2.md  part3.md  part4.md  part5.md
test/: test_material_toggles.hpp  test_mesh_binary.hpp  test_mesh_cube.hpp  test_model_matrix.hpp  test_project_matrix.hpp  test_scene_asset.hpp  test_shadow.hpp  test_utils.hpp  test_vertex_transform.hpp  test_view_matrix.hpp
